--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Intro component with sign up form</title>
 
@@ -35,22 +36,32 @@
               <img src="./images/icon-error.svg" class="error-icon" alt="error-img">
               <p class="error-text">First Name cannot be empty</p>
             </div>
+            <div class="field-group">
+              <label for="firstName">Last Name</label>
+              <input type="text" id="lastName" name="lastName" placeholder="Last Name">
+              <img src="./images/icon-error.svg" class="error-icon" alt="error-img">
+              <p class="error-text">Last Name cannot be empty</p>
+            </div>
+            <div class="field-group">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" placeholder="Email Address">
+              <img src="./images/icon-error.svg" class="error-icon" alt="error-img">
+              <p class="error-text">Looks like this is not an email</p>
+            </div>
+            <div class="field-group">
+              <label for="Password">Password</label>
+              <input type="password" id="password" name="password" placeholder="Password">
+              <img src="./images/icon-error.svg" class="error-icon" alt="error-img">
+              <p class="error-text">Password cannot be empty</p>
+            </div>
+            <button type="submit">Claim your free trial </button>
+            <p class="form-footer">By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
           </form>
         </div>
       </div>
     </div>
   </section>
-
-
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
+<footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
