--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section id="intro">
     <div class="container">
       <div class="left-col">
-        <h1>Learn to code by watching others</h1>
+        <h1>Learn to code by <br> watching others</h1>
         <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
           but understanding how developers think is invaluable. </p>
       </div>
